--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,16 @@ environment:
   sdk: '>=3.2.6 <4.0.0'
 
 dependencies:
+  cached_network_image: ^3.3.1
   flutter:
     sdk: flutter
   go_router: ^13.2.0
   http: ^1.2.0
+  intl: ^0.19.0
   provider: ^6.1.2
   shared_preferences: ^2.2.2
+  table_calendar: ^3.1.0
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
