--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,13 @@ environment:
 
 dependencies:
   cached_network_image: ^3.3.1
+  dio: ^5.4.1
   flutter:
     sdk: flutter
   go_router: ^13.2.0
   http: ^1.2.0
   intl: ^0.19.0
+  logger: ^2.2.0
   provider: ^6.1.2
   shared_preferences: ^2.2.2
   table_calendar: ^3.1.0
