--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
   dio: ^5.4.1
   flutter:
     sdk: flutter
-  go_router: ^13.2.0
+  flutter_keyboard_visibility: ^6.0.0
+  go_router: ^12.1.3
   http: ^1.2.0
   intl: ^0.19.0
   logger: ^2.2.0
